# 4k-stereo-synthesis-lab

./: .gitattributes  .gitignore  4K 高质量立体生成算法实现计划书.md  README.md  pyproject.toml  requirements-cuda.txt  requirements-risky.txt  requirements-stable.txt  requirements.txt  run_linux.bash  run_mac  run_windows.bat  update_windows.bat
docs/: 00-api-handoff-progress.md  00-goals.md  01-Realtime-2d-to-3d-specification.md  02-desktop2stereo-engineering-design-specification.md  04-implementation-plan.md  06-api-handoff-progress.md  07-depth-backend-benchmark-2026-06-16.md  07-depth-backend-benchmark.md  08-synthesis-optimization-log-2026-06-16.md  08-synthesis-optimization-log.md  09-api-handoff-progress.md  10-rtx3090-fused-synthesis-results.md  11-visual-regression-guide.md  12-openxr-stereo-runtime-plan.md  13-realtime-stereo-parameter-guide.md  14-host-api-preset-examples.md  15-host-api-contract.md  16-depth-py-migration-map.md  17-multiplatform-provider-layout.md  18-host-bootstrap-device-flow.md  20-openxr-gpu-glow-guide.md  21-openxr-ghosting-test-report.md  22-cinema-ipd64-production-sweep-guide.md  23-saved-cinema-settings-samples-guide.md  24-openxr-render-path-report.md  25-2d-to-3d-runtime-specification.md  26-desktop2stereo-engineering-design-specification.md  27-vr-headset-focal-distance-reference.md  28-Realtime-2d-to-3d-specification.md  35-OpenXR_Asynchronous_Decoupled_Rendering_Architecture_Report.md  36-OpenXR_Asynchronous_Decoupled_Rendering_Implementation_Plan.md  37-openxr-projection-quad-layer-convergence-note.md  4K 高质量立体生成算法实现计划书.md  README.md  (+3 more)
(+389 files in other folders)
