[project]
name = "4k-stereo-synthesis-lab"
version = "3.0b0"
description = "4K stereo synthesis research prototypes"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "pillow",
  "transformers",
  "onnx",
  "onnxruntime-gpu[cuda,cudnn]>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
